<resources>
    <string name="app_name">Fitplanner</string>
    <string name="hello_world">hey family</string>
    <string name="weight1">Weight :</string>
    <string name="weight2">Weight</string>
    <string name="Size1">Size :</string>
    <string name="Size2">Size</string>
    <string name="Size3">Meters </string>
    <string name="Size4">Centimeters </string>
    <string name="function">Mega function ! </string>
    <string name="imc">IMC Computing</string>
    <string name="raz">RAZ</string>
    <string name="descrLogo">Logo Fitplanner</string>
    <string name="result">Result :\nYou need to click on the computing button in order to get the result.</string>
    <string name="exercice"> You have choseb </string>
    <string name="jour1">Monday</string>
    <string name="jour2">Tuesday</string>
    <string name="jour3">Wednesday</string>
    <string name="jour4">Thursday</string>
    <string name="jour5">Friday</string>
    <string name="jour6">Saturday</string>
    <string name="jour7">Sunday</string>
    <string name="VALIDATION">Validate</string>
    <string name="user">User email</string>
    <string name="errorMailPass">Please enter your email and your password correctly</string>
    <string name="userLogin">User Login</string>
    <string name="userRegistration">User Registration</string>
    <string name="connexion">Connexion</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="notAlreadyRegistered">Not have an account ? Singup here...</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome </string>
    <string name="progressRegistration">Registration user... </string>
    <string name="askEmail">Please enter your email</string>
    <string name="askPass">Please enter your password</string>
    <string name="failRegister">Fail register</string>
    <string name="successRegister">Register done !</string>
    <string name="selectionexercises">Exercises selection</string>
    <string name="name">Name</string>
    <string name="firstname">First name</string>
    <string name="save">SAVE</string>
    <string name="age">Born</string>
    <string name="city">City</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="failSaveProfil">There is empty fields !</string>
    <string name="achieveSaveProfil">Profile Saved !</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pouet">Pouet</string>
    <string name="boutonreturn">Retourner à la sélection des exercices</string>
    <string name="imageMuscles">image du corps humain version muscles</string>
    <string name="title_activity_abdos_exercices">AbdosExercicesActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_biceps_exercises">BicepsExercisesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="fonte1">FONTE 1</string>
    <string name="fonte2">FONTE 2</string>
    <string name="pdc1">POIDS DU CORPS 1</string>
    <string name="pdc2">POIDS DU CORPS 2</string>
    <string name="title_activity_maps">Map</string>


    <string name="selectionDayTrainingButton">Add this exercise</string>
    <string name="achieveMAJcalendar">Calendrier d\'exercices mis à jour !</string>
    <string name="failMAJcalendar">Echec de la mise à jour du calendrier</string>
    <string name="title_activity_quadriceps_exercises">Quadriceps activity</string>
    <string name="channel_name">Notif Sport</string>
    <string name="channel_description">Notif Pour Rapeller Exercice</string>

</resources>
