<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.shamzic.applitp1.ProfileActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSelectionActivity"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/selectionexercises" />

        <TextView
            android:id="@+id/textViewUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@color/colorGrey"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@color/colorGrey"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radioButtonSexeFeminin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonSexeMasculin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@color/colorGrey"
                android:hint="@string/male"
                android:orientation="horizontal"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButtonSexeFeminin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/colorGrey"
                android:checked="true"
                android:hint="@string/female"
                android:orientation="horizontal"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="18sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:inputType="date"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@color/colorGrey"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@color/colorGrey"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/buttonSaveProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="saveProfile"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logout"
            android:textColor="@android:color/holo_red_dark" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
